Fix cutoff for long bios

--- a/popup.css
+++ b/popup.css
@@ -73,7 +73,7 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        max-height: 315px;
+        max-height: 365px;
         justify-content: space-between;
         align-content: start; /* Spacing between lines */
         align-items: start;
